# dockerfiles

./: README.md
.github/workflows/: rails.yml
cakephp/: Dockerfile  README.md
express/: Dockerfile  README.md
fastapi/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
flask/: Dockerfile
geth/: Dockerfile  README.md
geth/config/: genesis.json
java-spring-boot/: .dockerignore  .gitignore  Dockerfile  README.md  build.gradle.kts
java-spring-boot/src/main/java/com/example/demo/: WelcomeController.java
java8-spring-boot/: Dockerfile  README.md
node6.10.0-react-nginx/: Dockerfile
node8.5.0-react-nginx/: Dockerfile  package.json
parcel-react/: Dockerfile  README.md
phpdoc/: README.md
phpdoc/_example/app/: Example.php
phpdoc/composer/: Dockerfile  README.md  composer.json
phpdoc/output/: index.html
phpdoc/output/classes/: App.Example.html
phpdoc/output/files/: Example.html
phpdoc/output/graphs/: class.html
phpdoc/output/namespaces/: App.html  default.html
phpdoc/output/reports/: deprecated.html  errors.html  markers.html
phpdoc/php/: .dockerignore  Dockerfile  README.md
phpenv/: Dockerfile  README.md
poppler/: Dockerfile  README.md
python3.5.2-flask/: Dockerfile
rails/: Dockerfile
ruby2.3.1-rails/: Dockerfile
