[tool.poetry]
name = "fastapi-sample"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.1"}

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.3.0"
ruff = "^0.3.3"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-watch = "^4.2.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
